--- a/lemonadeProjectImerir/.classpath
+++ b/lemonadeProjectImerir/.classpath
@@ -3,8 +3,6 @@
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
 	<classpathentry kind="lib" path="libraries/java-json.jar"/>
-	<classpathentry kind="lib" path="libraries/jackson-core-asl-1.9.13.jar"/>
-	<classpathentry kind="lib" path="libraries/jackson-jaxrs-1.9.13.jar"/>
-	<classpathentry kind="lib" path="libraries/jackson-mapper-asl-1.9.13.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Aymeric/Documents/gson-2.6.2.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
